# convaier

./: .gitignore  README.md  convaier.example.yml  convaier.yml  pyproject.toml
src/convaier/: __main__.py  cli.py  config.py  context.py  pipeline.py  presets.py  report.py  ui.py
src/convaier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/convaier/agent/: client.py  prompt.py  tools.py
src/convaier/rag/: __init__.py  chunker.py  indexer.py  search.py
src/convaier/stages/: __init__.py  build.py  commit.py  deploy.py  lint.py  metrics.py  review.py  security.py  test.py
src/convaier/util/: docker.py  git.py  proc.py
